docs(detalhamento): adiciona analise do log do GeminiChatClientIT